<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jamshedpur Women\'s College</string>
    <string name="banner_id">ca-app-pub-4434477087178847/2155083990</string>
    <string name="interstitialAd_id">ca-app-pub-4434477087178847/9940923292</string>

    <string name="bold" tools:ignore="ReferenceType">@font/latobold</string>
    <string name="regular" tools:ignore="ReferenceType">@font/latoregular</string>
    <string name="light" tools:ignore="ReferenceType">@font/latolight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="close">Close</string>

    <string name="about_college">Committed to the cause of women’s education in the state of Jharkhand, Jamshedpur women’s college has come a long and luminous way, since its inception in 1953, Jamshedpur Women’s College a prestigious college for women, conferred with the status of a center with potential for excellence(CPE) by the University Grants Commission and awarded grade “A” By NACC. Presently Jamshedpur Women’s College is an Constituent autonomous college of kolhan University.</string>

    <string-array name="theme">

        <item>System Default</item>
        <item>Dark</item>
        <item>Light</item>

    </string-array>

</resources>