<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:id="@+id/college_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_college"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"
                android:text="A Constituent Autonomous College of Kolhan University"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"
                android:text="A Grade College by NAAC Bangalore"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"
                android:text="College with Potential for Excellence by University Grant Commission"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Courses"
            android:layout_marginTop="36dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/bold"/>

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="@dimen/text_margin"
            android:foregroundGravity="center"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:id="@+id/viewPager"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Details"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jamshedpur Women's College"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kharkai Link Road, Bistupur,\nEast Singhbhum, Jamshedpur,\nJharkhand 831001"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="jsrwomenscollege@gmail.com"
                android:autoLink="email"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0657 2249105"
                android:autoLink="phone"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <ImageView
                android:id="@+id/map_about"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/map_image"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>