<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@string/bold"
                android:text="Jamshedpur Women's College"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@string/light"
                android:text="@string/about_college"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/darkColor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@string/bold"
                        android:text="Departments"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/title_size" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Science"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Commerce"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Arts"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Others"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/text_size" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@string/bold"
                    android:text="Contact Details"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/title_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/light"
                    android:text="Jamshedpur Women's College"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/light"
                    android:text="Kharkai Link Road, Bistupur,\nEast Singhbhum, Jamshedpur,\nJharkhand 831001"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/light"
                    android:text="Email"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:autoLink="email"
                    android:fontFamily="@string/light"
                    android:text="jsrwomenscollege@gmail.com"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/light"
                    android:text="Phone"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:autoLink="phone"
                    android:fontFamily="@string/light"
                    android:text="0657 2249105"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size" />

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:src="@drawable/map_image" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>